Prevent scrollbar from appearing next to navbar, change panel border radius

--- a/bootstrap/about.css
+++ b/bootstrap/about.css
@@ -1,7 +1,12 @@
 #about_container {
-    width: 90%;
-    height: auto;
+    width: 100%;
+    padding: 0px 5% 0px 5%;
+    position: absolute;
+    top: 60px;
+    bottom: 0px;
     text-align: left;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .about_section {
