--- a/bootstrap/global.css
+++ b/bootstrap/global.css
@@ -5,4 +5,5 @@
     padding: 10px 10px 10px 10px;
     margin: 20px 10px 0px 10px;
     vertical-align: top;
+    border-radius: 0px;
 }
